fix mobile z-index

--- a/client/src/app/frontpage.css
+++ b/client/src/app/frontpage.css
@@ -175,7 +175,7 @@
         background-attachment: scroll;
         height: 100vh;
         width: 100vw;
-        z-index: -99;
+        z-index: 2;
     }
     .cover-intro {
         position: absolute;
